<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".AboutAppActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_id4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.gms.ads.AdView>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="150dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/black"
            android:elevation="10dp">
    <ImageView
        android:id="@+id/aboutImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/aboutappimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/aboutappp" />
        </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/developed_and_directed_by_harvinder_singh"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="#FFB300"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutImage"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:layout_gravity="center_horizontal"
        android:text="@string/this_app_helps_to_understand_learn_and_to_solve_java_programs_patterns_programs_it_contains_topic_wise_core_java_and_its_programs_this_app_has_a_very_simple_user_interface_and_contents_can_easily_understood_by_user"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.08" />

    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>